--- a/client/src/pages/Upcoming/Upcoming.module.css
+++ b/client/src/pages/Upcoming/Upcoming.module.css
@@ -2,6 +2,7 @@
 .Upcoming {
     padding: 0.25rem;
     background: var(--bg-base) !important;
+    width: 100%;
 }
 
 .Upcoming td input,
